kubernetes/k8s/openshift/api-gateway/api-gateway.yml
apiVersion: v1
kind: Route
metadata:
  name: expose-api-gateway
  namespace: video-server
spec:
  host: video-server.master.particles.dieei.unict.it
  to:
    kind: Service
    name: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: video-server
spec:
  ports:
    - port: 8081
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: video-server
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: docker-registry.default.svc:5000/video-server/api-gateway:1.0.0
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /var/videofiles
            name: storage-data
      volumes:
        - name: storage-data
          persistentVolumeClaim:
            claimName: storage
